Fix financials__icon overflowing

--- a/website/src/styles/components/_financials.scss
+++ b/website/src/styles/components/_financials.scss
@@ -88,4 +88,5 @@
   display: block;
   width: 18px;
   height: 18px;
+  font-size: 8px;
 }
